--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,12 +1,12 @@
 # Project information
-site_name: KobraGoNeo Insights
-site_url: https://1coderookie.github.io/KobraGoNeoInsights/
+site_name: Kobra2Pro Insights
+site_url: https://1coderookie.github.io/Kobra2ProInsights/
 site_author: Ulf Dieckmann
-site_description: Comprehensive information about Anycubic Kobra Go and Kobra Neo.
+site_description: Comprehensive information about Anycubic Kobra 2 Pro.
 
 # Repository
-repo_name: 1coderookie/KobraGoNeoInsights
-repo_url: https://github.com/1coderookie/KobraGoNeoInsights
+repo_name: 1coderookie/Kobra2ProInsights
+repo_url: https://github.com/1coderookie/Kobra2ProInsights
 
 # Copyright
 copyright: Copyright &copy; 2023 Ulf Dieckmann [ 3dneo (at) quantentunnel.de ] | <a href="https://www.flaticon.com/free-icons/3d-printer" title="3d printer icons">3d printer icon created by Freepik - Flaticon</a> <br> If you find this page useful, please consider recommending it to others. This will make the community aware of this page and help other users. Thank you! 
